# VoiceInput

./: .gitignore  LICENSE  README.md  README.zh-CN.md  build_backend.bat  build_release_zip.ps1  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
backend/: __main__.py  asr_backend.spec  asr_engine.py  audio_utils.py  config.py  model_manager.py  postprocess.py  requirements.txt  server.py
docs/: ARCHITECTURE.md  PRD.md  class-diagram.mermaid  sequence-diagram.mermaid
resources/: default_config.json
scripts/: generate_icon.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_utils.rs  autostart.rs  commands.rs  config.rs  errors.rs  gpu_check.rs  hotkey.rs  lib.rs  main.rs  paste.rs  process_manager.rs  recorder.rs  token.rs  tray.rs
src/components/: FloatingWindow.tsx  HotkeyCapture.tsx  Icons.tsx  ModelDownload.tsx  ResultDisplay.tsx  SettingsDialog.tsx  Toast.tsx  WaveformWidget.tsx
src/hooks/: useBackend.ts  useRecorder.ts  useSettings.ts
src/utils/: api.ts
